# OnlyRoark

./: .gitignore  LICENSE  README.md  app.py  auth.py  config.py  events.py  extensions.py  models.py  pyproject.toml  views.py
migrations/versions/: 4cabe2b6cb85_.py  5d35b342a76a_.py  917950d1e40e_.py  c07a2cf73c97_.py  c4344094ff68_.py  d43011c17877_.py  e87878ae0ece_.py
roark/: __init__.py  config.py  events.py
roark/static/: socketio.js  styles.css
roark/templates/: base.html
roark/templates/views/: chatroom.html
static/js/: functions.js  message.js
static/sass/: chatroom.sass  inputs.sass  messages.sass  nav.sass  styles.sass
templates/: base.html  macros.html
templates/views/: auth.html  chatroom.html
utils/: generate_image.py
