[tool.poetry]
name = "simple-messager"
version = "0.1.0"
description = ""
authors = ["Fluffy-Bean <michal-gdula@protonmail.com>"]
readme = "README.md"
packages = [{include = "simple_messager"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
flask-socketio = "^5.3.4"
eventlet = "^0.33.3"
gevent-websocket = "^0.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
