[tool.poetry]
name = "simple-messager"
version = "0.1.0"
description = ""
authors = ["Fluffy-Bean <michal-gdula@protonmail.com>"]
readme = "README.md"
packages = [{include = "simple_messager"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
flask-socketio = "^5.3.4"
eventlet = "^0.33.3"
gevent-websocket = "^0.10.1"
flask-sqlalchemy = "^3.0.5"
flask-assets = "^2.0"
flask-login = "^0.6.2"
libsass = "^0.22.0"
cssmin = "^0.2.0"
jsmin = "^3.0.1"
flask-migrate = "^4.0.4"
python-socketio = "5.7.2"
pillow = "^10.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
